welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
  if (Math.abs(a-b)=>10) {return true};
              ^lessBy10:3: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
 	if (Math.abs(a-c)=>10) {return true}
                    ^lessBy10:4: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
 	if (Math.abs(c-b)=>10) {return true}
                    ^